# BetterRenderDragon

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: build.yml
resources/: Resources.rc
src/: Global.h  MCHooks.cpp  MCPatches.cpp  Version.h  dllmain.cpp
src/api/: Logger.cpp  Logger.h
src/api/memory/: Hook.h  HookAPI.hpp
src/api/memory/win/: Hook.cpp
src/gui/: GUI.cpp  GUI.h  Options.cpp  Options.h
src/imgui/: ImGuiHooks.cpp  ImGuiHooks.h
src/mc/: _HeaderOutputPredefine.h
src/utils/: Util.cpp  Util.h
